--- a/src/SocketBackendFramework/SocketBackendFramework.csproj
+++ b/src/SocketBackendFramework/SocketBackendFramework.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NetCoreServer" Version="5.1.0" />
+  </ItemGroup>
+
 </Project>
