fix(Relay.Sample): fix config.json

--- a/src/SocketBackendFramework.Relay.Sample/config.json
+++ b/src/SocketBackendFramework.Relay.Sample/config.json
@@ -6,7 +6,7 @@
                 "PipelineDomains": [
                     {
                         "Name": "default",
-                        "ListenersMapper": {
+                        "TransportMapper": {
                             "Listeners": [
                                 {
                                     "ListeningPort": 8080,
