--- a/src/SocketBackendFramework.Relay.Sample/config.json
+++ b/src/SocketBackendFramework.Relay.Sample/config.json
@@ -11,6 +11,10 @@
                                 {
                                     "ListeningPort": 8080,
                                     "TransportType": "Udp"
+                                },
+                                {
+                                    "ListeningPort": 8081,
+                                    "TransportType": "Tcp"
                                 }
                             ]
                         }
